# collaborationBridge

./: .env.example  .envrc  .gitignore  .nixpkgs-version  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  MIGRATION_TO_UV.md  Makefile  PRICING_PAGE_IMPLEMENTATION.md  README.md  README.template.md  SOFT_DELETE_PRD_IMPLEMENTATION_SUMMARY.md  TEMPLATE_CUSTOMIZATION.md  TESTING_INFRASTRUCTURE_FIXES.md  agents.md  bandit_report.json  docker-compose.test.yml  fix-component-sizes.sh  flake.nix  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  shell.nix  workspace.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.github/workflows/: ci.yml  docs.yml
.prd/: frontend-reshaped-migration-prd.md
.reviews/: 001_security-review-prd_2025-06-25.md  SECURITY_REVIEW_SUMMARY_2025-06-25.md
alembic/: env.py
apps/storybook/: package.json
apps/storybook/.storybook/: main.ts  preview.ts
attached_assets/: asset-valuation-prd.md  expanded-community-lib-prd(2).md  frontend_component_prd_template.md  softdelete-postgresql-prd.md
config/: pricing.json  service-urls.json
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: LONG-TERM-TODO.md  MODERNIZATION_FILE_LIST.md  MODERNIZATION_PROGRESS.md  MONOREPO-MIGRATION-PLAN.md  MONOREPO-STATUS.md  MVP_IMPROVEMENTS_FROM_SOFT_DELETE_PRD.md  Makefile  PRD-Enhancement-Roadmap.md  TYPESCRIPT_MODERNIZATION_PRD.md  requirements.txt
docs/source/: conf.py  index.rst  ux-development-prd.md
docs/source/admin-guide/: index.md
docs/source/api/: index.rst
docs/source/architecture/: index.md
docs/source/bulk-operations/: index.rst
docs/source/component-library/: index.rst
docs/source/configuration/: index.rst
docs/source/database/: index.md
docs/source/deployment/: index.md
docs/source/developer-guide/: index.md
docs/source/development/: index.md
docs/source/frontend-component-library/: README.md  accessibility.rst  conf.py  design-system.rst  getting-started.rst  index.rst  internationalization.rst  migration-guide.rst  overview.rst  performance.rst  testing.rst
docs/source/health-monitoring/: index.rst
docs/source/i18n/: index.md
docs/source/monitoring/: index.md
docs/source/nix/: index.md
docs/source/quickstart/: index.md
docs/source/security/: index.md
docs/source/service-url-manager/: index.md
docs/source/soft-delete/: index.rst
docs/source/testing/: index.md
docs/source/troubleshooting/: index.md
docs/source/user-guide/: index.md
docs/templates/: ux-prd-template.md
examples/: advanced_soft_delete_usage.py
frontend/: .env.example  .eslintrc.json  .prettierrc  COMPONENTS.md  INTERNATIONALIZATION.md  MIGRATION_PLAN.md  MIGRATION_QUICK_START.md  Makefile  README.md  THEMING.md  fix-tests.sh  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/server/: server-reference-manifest.json
frontend/.next/types/: link.d.ts
frontend/src/: middleware.ts
frontend/src/__mocks__/: reshaped.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: README.md  providers.tsx
frontend/src/hooks/: use-i18n.ts  use-notifications.ts
frontend/src/i18n/: config.ts
frontend/src/lib/: reshaped-theme.ts
frontend/src/stores/: notification-store.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: login.spec.ts
rapport_tracker/: pyproject.toml
rapport_tracker/docs/: interaction_logging_flow.md
rapport_tracker/src/app/: main.py
rapport_tracker/src/app/api/: deps.py
rapport_tracker/src/app/api/v1/: contacts.py  interactions.py  rapport.py
rapport_tracker/src/app/core/: config.py  database.py  mixins.py  seed_data.py
rapport_tracker/src/app/crud/: base.py  contact.py  interaction.py  rapport.py
rapport_tracker/src/app/models/: __init__.py  contact.py  interaction.py  rapport.py  user.py
rapport_tracker/src/app/schemas/: contact.py  interaction.py  rapport.py
rapport_tracker/tests/: conftest.py
rapport_tracker/tests/integration/: test_api_interaction_flow.py
rapport_tracker/tests/unit/: test_crud_contact.py  test_crud_interaction.py  test_crud_rapport.py
requirements/: base.txt  dev.txt  test.txt
scripts/: check-work-hours.py  deploy-docs.sh  dev-docs.sh  generate-docs.sh  init-db.sh  install-nix.sh  install-pre-push-hook.sh  migrate_database.py  nix-services.sh  seed_test_data.py  serve-docs.sh  service-urls.py  setup-github-pages.sh  test_db_setup.py
src/collaboration_bridge/: main.py
src/collaboration_bridge/api/: deps.py
src/collaboration_bridge/core/: config.py  database.py  mixins.py  seed_data.py
src/collaboration_bridge/crud/: __init__.py  base.py  contact.py  interaction.py  interaction_draft.py  onboarding.py  rapport.py  user.py
src/collaboration_bridge/models/: __init__.py  contact.py  interaction.py  interaction_draft.py  onboarding.py  rapport.py  user.py
src/collaboration_bridge/schemas/: __init__.py  base.py  contact.py  interaction.py  interaction_draft.py  onboarding.py  rapport.py  user.py
src/collaboration_bridge/services/: __init__.py  base_service.py  onboarding.py  soft_delete_manager.py
src/project_name/: __init__.py  main.py
src/project_name/api/: __init__.py
src/project_name/components/: __init__.py
src/project_name/core/: config.py  database.py  database_manager.py  security.py  (+1 more)
tests/: conftest.py  factories.py  test_application.py  test_strategy_enhanced.py
tests/e2e/: placeholder.spec.js  test_guided_interaction_flow.py
tests/features/: log_interaction.feature
tests/integration/: test_api_interaction_flow.py  test_api_onboarding_flow.py  test_onboarding_flow.py  test_placeholder_integration.py
tests/unit/: test_advanced_database_features.py  test_check_work_hours.py  test_crud_contact.py  test_crud_interaction.py  test_crud_rapport.py  test_i18n_manager.py  test_main.py  test_placeholder.py  test_service_url_manager.py  test_soft_delete_enhanced.py
tests/utils/: stability.py
(+104 files in other folders)
