[project]
name = "rapport-tracker-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy>=2.0",
    "alembic",
    "pydantic-settings",
    "asyncpg",  # Async driver for PostgreSQL
    "aiosqlite", # Async driver for SQLite (testing)
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "black",
]

# Enforce PEP 8 (E/W) and PEP 257 (D)
[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "B", "N"]
ignore = ["D100", "D104"] # Common docstring ignores

# Enforce PEP 484
[tool.mypy]
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]